Sort out flex items in accented header to align them correctly

--- a/src/app/components/ui/Container/Container.module.scss
+++ b/src/app/components/ui/Container/Container.module.scss
@@ -7,6 +7,10 @@
   width: 100%;
 }
 
+.flex {
+  display: flex;
+}
+
 @media (min-width: $mobile) {
   .containerBase {
     max-width: $mobile;
